common/dynaql/src/registry/scalars/snapshots/dynaql__registry__scalars__phone__tests__ensure_directives_sdl.snap
---
source: common/dynaql/src/registry/scalars/phone.rs
assertion_line: 117
expression: "PhoneNumberScalar::sdl()"
---
"""
A phone number. This value is stored as a string. Phone numbers can contain either spaces or hyphens to separate digit groups. Phone numbers without a country code are assumed to be US/North American numbers adhering to the North American Numbering Plan (NANP).
"""
scalar PhoneNumber 

