common/dynaql/src/registry/scalars/snapshots/dynaql__registry__scalars__phone__tests__should_fail_missing_initial_char.snap
---
source: common/dynaql/src/registry/scalars/phone.rs
assertion_line: 102
expression: scalar
---
Err(
    InputValueError {
        message: "Failed to parse \"PhoneNumber\": Invalid phone number",
        phantom: PhantomData<serde_json::value::Value>,
    },
)
